# dialog_example

./: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
dialog_example/: Mover.py  cal_poses.jsonc  camera_calibration.npz  dialog_node.py  ov5640_calib.py  ov5640_image_publisher.py  ov5640_image_taker.py  ov5640_publisher.py  robot_params.json
dialog_example/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dialog_example/log/: latest_build
launch/: dialog_example.launch.py  launch_.py
